renamed password generator

--- a/Password Generator.ipynb
+++ b/Password Generator.ipynb
@@ -5,14 +5,24 @@
    "metadata": {},
    "source": [
     "## Task\n",
-    "* take password length as input\n",
-    "* length must be between 6 & 12\n",
-    "* generate random password having digits, special characters, upper and lower case characters"
+    "* take password length as input (length must be between 6 & 12)\n",
+    "* generate random password having digits, special characters, upper and lower case characters\n",
+    "\n",
+    "###### Core Concepts:\n",
+    "* lambda (anonymous) function\n",
+    "* recursion\n",
+    "\n",
+    "###### Used Modules:\n",
+    "* string\n",
+    "* random\n",
+    "\n",
+    "#### Data structure:\n",
+    "* list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,27 +42,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# dataset\n",
-    "dataset=[st.punctuation,st.ascii_letters]\n",
+    "dataset=[st.punctuation,st.ascii_letters, st.digits]\n",
     "dataset=''.join(dataset)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Yd+\"&]M'"
+       "'k\\\\xz48m'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
